--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.rohan.myimdb.MainActivity">
 
     <fragment
+        android:id="@+id/fragment_grid"
         class="com.rohan.myimdb.MoviesGridFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
