--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/fragment_grid"
-        class="com.rohan.myimdb.MoviesGridFragment"
+        class="com.rohan.myimdb.GridFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
