--- a/app/src/main/res/layout/ad_movie_reyclcer_view_item.xml
+++ b/app/src/main/res/layout/ad_movie_reyclcer_view_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.gms.ads.NativeExpressAdView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.gms.ads.NativeExpressAdView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/native_ad"
-    ads:adUnitId="@string/ad_unit_id_native_movies_recycler_view_item"
-    ads:adSize="FULL_WIDTHx80"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="80dp"
+    android:visibility="gone"
+    ads:adSize="FULL_WIDTHx80"
+    ads:adUnitId="@string/ad_unit_id_native_movies_recycler_view_item">
 
 </com.google.android.gms.ads.NativeExpressAdView>
