--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -13,7 +13,7 @@
 
         <fragment
             android:id="@+id/fragment_grid"
-            class="com.rohan.movieroll.GridFragment"
+            class="com.rohan.movieroll.ui.GridFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
