--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rohan.movieroll.DetailActivity">
+    tools:context="com.rohan.movieroll.ui.DetailActivity">
 
     <FrameLayout
         android:id="@+id/container_details"
