--- a/app/src/main/res/layout/fragment_movies_grid.xml
+++ b/app/src/main/res/layout/fragment_movies_grid.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rohan.movieroll.GridFragment">
+    tools:context="com.rohan.movieroll.ui.GridFragment">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_movies_grid"
