Added localization for French, Arabic, Dutch and Czech

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -27,7 +27,7 @@
     <item
         android:id="@+id/action_other_apps"
         android:orderInCategory="4"
-        android:title="Other Apps"
+        android:title="@string/other_apps"
         app:showAsAction="never" />
 </menu>
 
