--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -15,6 +15,7 @@
             android:padding="2dp">
 
             <TextView
+                android:gravity="start"
                 android:id="@+id/review_author_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,6 +26,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:gravity="start"
                 android:id="@+id/review_content_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
