--- a/app/src/main/res/layout/fragment_movies_grid.xml
+++ b/app/src/main/res/layout/fragment_movies_grid.xml
@@ -1,48 +1,60 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent_grid_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/parent_grid_relative_layout"
     tools:context="com.rohan.movieroll.ui.GridFragment">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_movies_grid"
+    <FrameLayout
+        android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true"
-        android:background="@color/colorPrimary"
-        android:paddingEnd="10dp"
-        app:contentInsetEnd="0dp"
-        app:contentInsetStart="0dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/toolbar_text_view"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_movies_grid"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:paddingEnd="5dp"
-            android:paddingStart="5dp"
-            android:text="@string/app_name"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorPrimary"
+            android:paddingEnd="10dp"
+            app:contentInsetEnd="0dp"
+            app:contentInsetStart="0dp">
 
-    </android.support.v7.widget.Toolbar>
+            <TextView
+                android:id="@+id/toolbar_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:paddingEnd="5dp"
+                android:paddingStart="5dp"
+                android:text="@string/app_name"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+        </android.support.v7.widget.Toolbar>
 
+        <com.miguelcatalan.materialsearchview.MaterialSearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/search"
+            app:searchBackIcon="@drawable/ic_arrow_back_primary_24dp"
+            app:searchCloseIcon="@drawable/ic_cancel_primary_24dp"/>
+    </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/movies_grid_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_movies_grid" />
+        android:layout_below="@id/toolbar_container" />
 
     <ImageView
         android:id="@+id/no_favourites_present_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar_movies_grid"
+        android:layout_below="@id/toolbar_container"
         android:layout_margin="20dp"
         android:src="@drawable/placeholder_no_image_available" />
 
